crates/swc_css_parser/tests/errors/rome/invalid/grid/repeat/unclosed/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/rome/invalid/grid/repeat/unclosed/input.css:3:1
  |
3 | }
  | ^

error: Unexpected end of file
 --> $DIR/tests/errors/rome/invalid/grid/repeat/unclosed/input.css:3:3
  |
3 | }
  |   ^

error: Unexpected end of file

